--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
+  "name": "RDP Backend Project",
+  "version": "initial",
+  "description": "Backend For Handling Business Process at Raden Perabot Group",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "@hapi/hapi": "^21.4.4",
+    "dotenv": "^17.2.3",
+    "joi": "^18.0.2",
+    "nodemon": "^3.1.11"
+  }
 }
